--- a/client/dashboard/lend.html
+++ b/client/dashboard/lend.html
@@ -233,7 +233,7 @@
                             <div class="card-body">
                                 <div class="stat-widget-five">
                                     <div class="stat-icon dib flat-color-3">
-                                            <img src="images/dai.jpg" height="50px" width="50px">
+                                            <img src="images/dai.JPG" height="50px" width="50px">
                                         </div>
                                     <div class="stat-content">
                                         <div class="text-left dib">
